# quiffen

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  README.rst  dependabot.yml  makefile  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml  tests.yml
.tox/black/: .tox-info.json
.tox/isort/: .tox-info.json
.tox/ruff/: .tox-info.json
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  readme.doctree
docs/_build/doctrees/source/: modules.doctree  quiffen.core.doctree  quiffen.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_sources/: readme.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt  quiffen.core.rst.txt
docs/_build/html/source/: modules.html  quiffen.core.html  quiffen.html
docs/source/: quiffen.rst
quiffen/: __init__.py  utils.py
quiffen/core/: account.py  accounts.py  base.py  categories_classes.py  category.py  class_type.py  investment.py  parser_state.py  qif.py  qif_parser.py  security.py  split.py  transaction.py  transactions.py
tests/: test.qif  test_account.py  test_base.py  test_category.py  test_class_type.py  test_flavors.py  test_investment.py  test_parsing.py  test_qif.py  test_qif_parser.py  test_security.py  test_split.py  test_transaction.py  test_transactions.py  test_utils.py
tests/test_files/: invalid.txt  test.qif  test_FMQifTest2023-10-18.qif  test_category_inherit.qif  test_category_override.qif  test_circular_reference.qif  test_clear_autoswitch.qif  test_nosymbol.qif  test_option_autoswitch.qif  test_oth_a.qif  test_split.qif  test_transaction_before_account_definition_1.qif  test_transaction_before_account_definition_2.qif  test_unknown_account_type.qif
tests/testqifs/: example-security-list.qif  parser-amends.02.qif  parser-amends.03.qif  parser-amends.qif
