[tool.poetry]
name = "quiffen"
version = "2.0.0"
description = "Quiffen"
authors = ["Isaac Harris-Holt <isaac@harris-holt.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/isaacharrisholt/quiffen"
repository = "https://github.com/isaacharrisholt/quiffen"
documentation = "https://quiffen.readthedocs.io/en/latest/"
keywords = ['qif', 'finance', 'data processing']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]


[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^1.10.2"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
