[tool.poetry]
name = "quiffen"
version = "2.0.8"
description = "Quiffen"
authors = ["Isaac Harris-Holt <isaac@harris-holt.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/isaacharrisholt/quiffen"
repository = "https://github.com/isaacharrisholt/quiffen"
documentation = "https://quiffen.readthedocs.io/en/latest/"
keywords = ['qif', 'finance', 'data processing']
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
pandas = "^1.5.1"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.254"
tox = "^4.4.6"
pyright = "^1.1.296"
pre-commit = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py

[tool.pyright]
pythonVersion = "3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
